# act_implementation

./: .gitignore  ACT_walkthrough.ipynb  AGENTS.md  CLAUDE.md  OPTIMIZATION_SUMMARY.md  QUICK_START_OPTIMIZED.md  README.md  REMOTE_SETUP.md  REPORT.md  act.py  collect_demos.py  collect_demos_parallel.py  eval.py  pyproject.toml  train.py
act_implementation/data/: dataset.py
act_implementation/envs/: robosuite_wrapper.py  scripted_policy.py
act_implementation/models/: act_model.py  vision_encoder.py
checkpoints/: config.yaml
checkpoints/test_run/: config.yaml
docs/: vision-results.md  work-log.md
scripts/: benchmark_collection.py  check_controller.py  check_success_criteria.py  debug_gripper.py  debug_pickplace.py  debug_policy.py  generate_mock_data.py  test_env.py  test_manual_grasp.py  test_scripted_policy.py  visualize_policy.py
tests/: test_act.py
