[project]
name = "act-one-file"
version = "1.0.0"
description = "Minimal one-file ACT behavior cloning demo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "numpy>=2.3.3",
    "robosuite>=1.5.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
vision = [
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
